--- a/mcs/tools/btls/Makefile
+++ b/mcs/tools/btls/Makefile
@@ -3,7 +3,7 @@ SUBDIRS =
 include ../../build/rules.make
 
 LOCAL_MCS_FLAGS =
-LIB_REFS = System Mono.Security Mono.Security.Providers.Btls
+LIB_REFS = System Mono.Security Mono.Btls.Interface
 PROGRAM = btls-cert-sync.exe
 
 include ../../build/executable.make
