--- a/mcs/class/Mono.Btls.Interface/Makefile
+++ b/mcs/class/Mono.Btls.Interface/Makefile
@@ -1,8 +1,8 @@
-thisdir = class/Mono.Security.Providers.Btls
+thisdir = class/Mono.Btls.Interface
 SUBDIRS = 
 include ../../build/rules.make
 
-LIBRARY = Mono.Security.Providers.Btls.dll
+LIBRARY = Mono.Btls.Interface.dll
 LIB_REFS = System Mono.Security
 LIB_MCS_FLAGS = -unsafe -nowarn:1030 -keyfile:../mono.pub -delaysign -d:SECURITY_DEP
 
